public/style/style.css
/* ... */
#changelog .demo-url i, #changelog .youtube i, #changelog .comment i,
#chamber .demo-url i, #chamber .youtube i, #chamber .demo-url i, #chamber .youtube i, #chamber .comment i {
    cursor: pointer;
}
#changelog .demo-url i, #changelog .youtube i, #changelog .submission, #changelog .comment, #changelog .banScore   {
    font-size: 12px;
}
#changelog .demo-url i:hover, #changelog .youtube i:hover, #changelog .setBannedStatus i:hover, #changelog .comment i:hover,
#chamber .demo-url i:hover, #chamber .youtube i:hover, #chamber .comment i:hover {
    color: #444;
}


#chamber .entry .demo-url, #chamber .entry .youtube, #chamber .entry .comment, #chamber .entry .submission {
    height: 100%;
    float: right;
    text-align: right;
}
#chamber .entry .demo-url, #chamber .entry .youtube, #chamber .entry .comment {
    width: 25px;
}
#chamber .demo-url i, #chamber .youtube i, #chamber .comment i, #chamber .submission i  {
    margin-top: 15px;
    font-size: 13px;
}
#chamber .submission {
    padding-right: 11px;
    width: 25px;
}
#chamber .submission.autosubmission {
    padding-right: 10px;
}

#profile .sp .score, #profile .coop .score  {
    width: 55px;
}
#profile .sp .wr-diff, #profile .coop .wr-diff  {
    width: 52px;
}
#profile .sp .nr-diff, #profile .coop .nr-diff  {
    width: 52px;
}
#profile .timespoints {
    width: 410px;
}
#profile .timespoints .scoretable {
    padding-left: 10px;
}
#profile .timespoints .title {
    width: 140px;
}
#profile .timespoints .rank {
    width: 30px;
}
#profile .timespoints .score {
    width: 66px;
}
#profile .timespoints .wr-diff {
    width: 65px;
}
#profile .timespoints .nr-diff  {
    width: 60px;
}
#profile .user-noexist {
    text-align: center;
    margin-top: 130px;
}
#profile .user-noexist .stmt {
    font-size: 13px;
}
#editProfile .normalcontent input {
    width: 380px;
    margin: 5px 0px 16px 0px;
}
#profile .usericons {
    margin: 10px 5px;
    display: inline-block;
}
#profile .usericons a{
    display: inline-block;
}
#profile .usericons span {
    width: 25px;
    height: 25px;
    display: inline-block;
    background-size: contain;
    /*margin: 0 3px;*/
    vertical-align: bottom;
}
html[class="dark"] #profile .usericons .fa-play:hover {
    color: #aaa !important;
}
#profile .twitch-linked {
    background: #6441A5;
}
#profile .uploadInfo {
    background: #226D99;
}
#profile .uploadInfo a, #profile .YoutubeUploadInfo a {
    font-weight: bold;
    color: #FFF;
}
#profile .place-expl {
    cursor: pointer;
    font-size: 10px;
    font-weight: bold;
}

#profile .scoretable {
    font-size: small;
    width: 100%;
}
#profile .youtubeLink .fa-square {
    color: #ac303C;
    font-size: 27px;
}
#profile .youtubeLink:hover .fa-square {
    color: #c73846;
}
#profile .youtubeLink .fa-play {
    color: #eee;
    font-size: 14px;
    top: 1px;
    left: 1px;
}
#profile .twitchLink .fa-square {
    color: #6441A5;
    font-size: 27px;
}
#profile .twitchLink:hover .fa-square {
    color: #7d5bbe;
}
#profile .twitchLink .fa-twitch {
    color: #eee;
    font-size: 16px;
    top: 3px;
    left: 0px;
}
#profile .steamLink .fa-square  {
    color: #eee;
    font-size: 25px;
    top: 1px;
}
#profile .steamLink .fa-steam-square {
    font-size: 27px;
    color: #333;
}
#profile .steamLink:hover .fa-steam-square  {
    color: #444;
}

#profile .profile-title .score {
    padding-right: 20px;
    float: right
}

#profile .column-title .chaptertime {
    padding-right: 20px;
    float: right
}

#profile .profile-title {
    text-transform: uppercase;
}


/* CHAMBER SPECIFIC STYLING */
#chamber {
    width: 960px;
    /*	background: blue;*/
    margin: 40px auto;
}
#chamber .chamberview {
    position: relative;
    width: 100%;
    height: 250px;
    border-top: 3px solid #3096d1;
    border-bottom: 3px solid #3096d1;
    /*background-size: contain;
    background-repeat: no-repeat;*/
    font-family: "Aperture";
    color: #3e88b3;
    text-transform: uppercase;
    background-size: cover;
}
#chamber .chamberchaptername {
    font-size: 20px;
    opacity: 0;
}
#chamber .chamberchambername {
    font-size: 37.5px;
    font-weight: bold;
    opacity: 0;
    color: #323C40;
}
#chamber .chamberchambername {
    cursor: pointer;
}
#chamber .chamberinfo  {
    width: 264px;
    height: 149px;
    margin: 93px auto;
    text-align: center;
    color: #E1E8EB;
    line-height: 28px;
    width: 100%;
}
#chamber .chamberinfo.chamberchambername, .chamberinfo.chamberchambername  {
    opacity: 0.9;
}
#chamber .entry {
    width: 100%;
    background: #ededed;
    height: 42px;
    border-bottom: 1px solid #a9a9a9;
}

#chamber .entry > *  {
    float: left;
    font-family: Segoe UI;
    color: #4A4A4A;
    font-size: 14px;
    line-height: 42px;
}
#chamber .entry .rank {
    text-align: center;
    width: 80px;
}
#chamber .entry .boardname {
    width: 300px;
    /*text-transform: uppercase;*/
    /*font-weight: bold;*/
    font-family: Aperture;
    font-size: 16px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}
#chamber .entry .date {
    width: 130px;
    height: 100%;
    float:right;
    text-align: right;
}
#chamber .entry .date a, #chamber .entry .boardname a{
    height: 42px;
    display: inline-block;
}
#chamber .entry .boardname a {
    padding-top: 0px;
}
#chamber .entry .score {
    float: right;
    width: 50px;
    text-align: right;
    margin-right: 10px;
    margin-left: 22px;
}
#aggregated #chamber .entry .score {
    margin-right: 15px;
}
#chamber .datatable {
    width: 100%;
}
.entry .score a {
    text-decoration: none;
    color: inherit;
}
#chamber .entry.you .boardname, #chamber .entry.you .boardname a,
#chamber .entry.you .rank, #chamber .entry.you .rank a,
#chamber .entry.you .score, #chamber .entry.you .score a {
    color: #0066cc;
    /*font-weight: bold;*/
}
.entry .boardname a {
    text-decoration: none;
    color: inherit;
    display: inline-block;
}
/* ... */

